--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
       id: meta
       with:
         images: ghcr.io/${{ github.repository }}
+        flavor: latest=true
         tags: type=sha
 
     - uses: docker/setup-qemu-action@v3
